coding tweaks to texSave*, attempt to produce relative path names in textures

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -14,6 +14,7 @@ changes since 1.0.18:
   - adding a new texture now presents a file selection dialog
   - new "Collapse Array" spell to selectively remove empty links
   - re-add texture export: NiPixelData can be exported to TGA or DDS (default)
+  - texture chooser pathing tweaks
  * Add support for UV editing of embedded textures and external nif textures
  * "failed to load file header" message now gives hexadecimal and string
    values instead of decimal
