--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,7 +1,10 @@
  == CHANGELOG ==
 
-This is version 1.0.19 of NifSkope.
+This is version 1.0.20 of NifSkope.
 
+changes since 1.0.19:
+ * updated to Qt 4.5.0
+ 
 changes since 1.0.18:
  * Spells:
   - fixed "Multi Apply Mode" spell [ niftools-Bugs-2475705 ]
