--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -4,12 +4,12 @@ This is version 1.0.20 of NifSkope.
 
 changes since 1.0.19:
  * updated to Qt 4.5.0
- * Fix tooltips display for nif.xml annotations
+ * fix tooltips display for nif.xml annotations
  * Paste Block/Branch spells now set Controller and Target links when pasting
-   Controller blocks
- * Fix styling of file selection widget styling ("Load" and "Save As")
- * Flag spell updated for Vertex Color, Stencil Buffer, and Z Buffer
-   properties
+   controller blocks, and updates Effects array when pasting an effect block
+ * Paste At End spell added to paste a branch without parenting
+ * Flag spell updated for Vertex Color, Stencil Buffer, and Z Buffer properties
+ * bug fix for file selection widget ("Load" and "Save As") textbox styling
 
 changes since 1.0.18:
  * Spells:
