* re-add and re-implement "hide condition zero" (current name: "Hide Version    Mismatched Rows")  * update blocks spell to set names (BSXFlags, BSBound) where nif.xml can't  * Display float values of -0 (0x80000000) as such (hackish)  * Enumeration combo boxes will default to current value on edit  * Fix for old-style particle display where Emit Flags were 0 (auto-adjust)  * Bugfix for color selection widget (hue not set correctly)  * Add display of slider value to NifFloatSlider (e.g. Material Properties)  * Value edit widgets now inherit from ValueEdit where possible    (cosmetic documentation tweak)  * Various doxygen documentations

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -20,6 +20,7 @@ changes since 1.0.19:
  * display of BSBounds (displayed with Havok)
  * highlighting of strips
  * UV editing of textures other than the base texture
+ * re-add hiding of rows not applicable to the current version
 
 changes since 1.0.18:
  * Spells:
