--- a/TODO.TXT
+++ b/TODO.TXT
@@ -4,6 +4,8 @@ To do:
 - Copy/Paste from 20.0.0.5 to 20.2.0.7 does not work as expected
 - Size update not calculated correctly after string edits and array edits
 - Initialise arrays from XML defaults
-- Multitexturing of particles (eg. Tribunal.bsa\meshes\i\act_rockslide01.nif)
+- Multitexturing of particles (eg. Tribunal.bsa\meshes\i\act_rockslide01.nif, Bloodmoon.bsa\meshes\w\w_art_ice_mace.nif)
 - doxygen documentation of all classes and files
+- Diplay all particle systems
+- Clean up SVN log entries, check all old builds
 
