add Edit Bounds spell, fix MOPP compilation issue (includes needed before ifdef), update changelog

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -8,6 +8,7 @@ changes since 1.0.19:
  * Paste Block/Branch spells now set Controller and Target links when pasting
    controller blocks, and updates Effects array when pasting an effect block
  * Paste At End spell added to paste a branch without parenting
+ * Fix display of Stencil and Z Buffer properties for versions >= 20.1.0.3
  * Flag spell updated for Vertex Color, Stencil Buffer, and Z Buffer properties
  * bug fix for file selection widget ("Load" and "Save As") textbox styling
  * performance improvements when attaching animation
@@ -17,7 +18,8 @@ changes since 1.0.19:
  * display of NiVisController
  * fixed display of NiMaterialColorController for versions < 10.1.0.0 and
    added flags editor
- * display of BSBounds (displayed with Havok)
+ * display of BSBounds (displayed with Havok), tweaks to display of Bounding
+   Box, added a "Edit Bounds" spell
  * highlighting of strips
  * UV editing of textures other than the base texture
  * re-add hiding of rows not applicable to the current version
