--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -6,6 +6,7 @@ changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
  * added variable mipmap filtering display for NiTexturingProperty
  * added "Mesh->Flip Faces" spell
+ * added "Texture->Add Flip Controller" spell
 
 changes since 1.0.19:
  * updated to Qt 4.5.0
