--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -8,12 +8,14 @@ changes since 1.0.20:
  * added "Mesh->Flip Faces" spell
  * added "Texture->Add Flip Controller", "Texture->Edit Flip Controller"
    spells
+ * added support for reading NeoSteam headers
  * "Combine Properties" spell will not combine properties that inherit
    BSShaderProperty since they need to be unique (reported by Saiden)
  * fixed A -> B spell for bhkHingeConstraint (issue #2835485 reported by
    nexekho)
  * selection highligting fixes for bhkPackedNiTriStripsShape (triangles and
    normals)
+ * added support for KrazyRain and Zorsis blocks (control characters etc.)
 
 changes since 1.0.19:
  * updated to Qt 4.5.0
