--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -18,7 +18,8 @@ changes since 1.0.20:
  * added support for KrazyRain and Zorsis blocks (control characters etc.)
  * synced block order algorithm with pyffi (fixes the "falling signs" bug in
    Oblivion)
- 
+ * allow UV editing of meshes without a base texture
+
 changes since 1.0.19:
  * updated to Qt 4.5.0
  * fix tooltips display for nif.xml annotations
