--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,6 +3,8 @@
 This is version 1.0.22 of NifSkope.
 
 changes since 1.0.21:
+ * added support for NiPersistentSrcTextureRendererData textures (alternate
+   form of NiPixelData)
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
