allow nif.xml enumeration values to be specified in hexadecimal

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -5,6 +5,7 @@ This is version 1.0.22 of NifSkope.
 changes since 1.0.21:
  * added support for NiPersistentSrcTextureRendererData textures (alternate
    form of NiPixelData)
+ * allow hexadecimal values in nif.xml enumeration options
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
