--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -7,6 +7,7 @@ changes since 1.0.21:
  * added support for NiPersistentSrcTextureRendererData textures (alternate
    form of NiPixelData)
  * allow hexadecimal values in nif.xml enumeration options
+ * added "String Palette->Replace Entries" spell for NiSequence blocks
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
