Fix display of Fallout 3 morphs.
NiGeomMorphController, for 20.2.0.7 onwards, uses a MorphWeight
compound which holds the Interpolator reference, requiring another
step down the child / link chain to access the key data.

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -9,6 +9,7 @@ changes since 1.0.21:
  * allow hexadecimal values in nif.xml enumeration options
  * added "String Palette->Replace Entries" spell for NiSequence blocks, and
    "Animation->Edit String Palettes" helper
+ * Fix display of Fallout 3 morph animations
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
