--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -10,6 +10,7 @@ changes since 1.0.21:
  * added "String Palette->Replace Entries" spell for NiSequence blocks, and
    "Animation->Edit String Palettes" helper
  * fixed display of Fallout 3 morph animations (NiGeomMorpherController)
+ * support reading nifs which use the JMI extension and header
  * added "Node->Attach Parent Node" (suggested by vurt2)
 
 changes since 1.0.20:
