--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -12,6 +12,9 @@ changes since 1.0.21:
  * fixed display of Fallout 3 morph animations (NiGeomMorpherController)
  * support reading nifs which use the JMI extension and header
  * added "Node->Attach Parent Node" (suggested by vurt2)
+ * fix display of multiple decal textures (reported by Axel) - note that the
+   number of texture units in your graphics card may limit how many textures
+   can be displayed simultaneously
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
