--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -15,6 +15,7 @@ changes since 1.0.21:
  * fix display of multiple decal textures (reported by Axel) - note that the
    number of texture units in your graphics card may limit how many textures
    can be displayed simultaneously
+ * added UV coordinate set selection / duplication to UV editor context menu
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
