Finalise NiPixelData import
* Fix channel types/masks when importing a DDS into a NIF >= 20.0.0.4
* Remove debug messages (hopefully all of them)
* Change "Embed" spell from debug-only to release

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -17,6 +17,7 @@ changes since 1.0.21:
    can be displayed simultaneously
  * added UV coordinate set selection / duplication to UV editor context menu
  * updated BSXFlags bit descriptions
+ * re-add NiPixelData texture import ("Texture->Embed" spell)
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
