--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -18,7 +18,9 @@ changes since 1.0.21:
  * added UV coordinate set selection / duplication to UV editor context menu
  * updated BSXFlags bit descriptions
  * re-add NiPixelData texture import ("Texture->Embed" spell)
- * installer also registers .texcache and .pcpatch (Empire Earth II external NiPixelData files)
+ * load .texcache (Empire Earth II / III external NiPixelData files) and allow
+   direct texture export; installer also registers .texcache and .pcpatch
+   (unknown 8-bit 1-dimensional textures?) extensions
 
 changes since 1.0.20:
  * added support for displaying 8-bit palettised DDS textures
