--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -4,6 +4,7 @@ This is version 1.1.0 of NifSkope.
 
 changes since 1.0.22:
  * updated to Qt 4.6.2
+ * import window state and lighting settings from previous versions
 
 changes since 1.0.21:
  * updated to Qt 4.5.3
