--- a/TODO.TXT
+++ b/TODO.TXT
@@ -18,4 +18,5 @@ To do:
 - Fix minor bugs in UV editor when data is shared across multiple shapes
 - Track down all qWarning() uses where QMessageBox is more appropriate
 - Use qAssert more often for debugging
+- Fix BSA support (broken by Qt 4.6.2)
 
