BSA documentation etc.
Initial structure of BSA iterator for Qt 4.6

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,7 +3,7 @@
 This is version 1.1.0 of NifSkope.
 
 changes since 1.0.22:
- * updated to Qt 4.6.2
+ * updated to Qt 4.6.2 (currently breaks BSA support)
  * import window state and lighting settings from previous versions
  * better support for big-endian files
  * increased the number of decimal places for rotations (suggested by Ghogiel)
