Highlight subshape selection in bhkPackedNiTriStripsShape.

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -12,6 +12,7 @@ changes since 1.0.22:
     removes empty links (fixes issue #3037165)
   - "Collapse Link Arrays" which removes all empty links and works for all
     versions
+ * highlight subshape selection in bhkPackedNiTriStripsShape
 
 changes since 1.0.21:
  * updated to Qt 4.5.3
