--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,7 +3,8 @@
 This is version 1.1.0 of NifSkope.
 
 changes since 1.0.22:
- * updated to Qt 4.6.2 (currently breaks BSA support)
+ * updated to Qt 4.6.2
+ * reworked BSA code for Qt 4.6 changes
  * import window state and lighting settings from previous versions
  * better support for big-endian files
  * increased the number of decimal places for rotations (suggested by Ghogiel)
