--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -13,8 +13,11 @@ changes since 1.0.22:
     removes empty links (fixes issue #3037165)
   - "Collapse Link Arrays" which removes all empty links and works for all
     versions
+ * fix for corrupt version write
  * highlight subshape selection in bhkPackedNiTriStripsShape
  * add Fallout New Vegas to game texture auto-detection
+ * updated to GLee 5.4.0
+ * nif.xml updates for Divinity 2 and Fallout New Vegas
 
 changes since 1.0.21:
  * updated to Qt 4.5.3
