--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -19,6 +19,8 @@ changes since 1.0.22:
  * updated to GLee 5.4.0
  * nif.xml updates for Divinity 2 and Fallout New Vegas
  * OpenGL fix for ATI/AMD graphics cards (contributed by corwin)
+ * bounds calculations for OpenGL view now take BSBounds and old style
+   bounding boxes into account
 
 changes since 1.0.21:
  * updated to Qt 4.5.3
