--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,8 @@
  == CHANGELOG ==
 
-This is version 1.1.0 of NifSkope.
+This is version 1.1.1 of NifSkope.
+
+changes since 1.1.0:
 
 changes since 1.0.22:
  * updated to Qt 4.6.2
