--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,6 +3,7 @@
 This is version 1.1.1 of NifSkope.
 
 changes since 1.1.0:
+ * added Skyrim support
 
 changes since 1.0.22:
  * updated to Qt 4.6.2
