--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -4,7 +4,7 @@ This is version 1.1.1 of NifSkope.
 
 changes since 1.1.0:
  * added Skyrim support
- * hierarchy fix for BSShaderProperty
+ * hierarchy fix for BSShaderProperty and derived blocks
  * hierarchy fix for NiParticlesData and derived blocks
  * support for Qt 4.8 RC1
  * another qhull update
