--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -9,6 +9,7 @@ changes since 1.1.0:
  * support for Qt 4.8 RC1
  * another qhull update
  * material fix for pack strips spell (issue #3413668)
+ * fix for property attach spell for Skyrim (issue #3451054)
 
 changes since 1.1.0-RC1:
  * block number is visible
