--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -10,6 +10,7 @@ changes since 1.1.0:
  * another qhull update
  * material fix for pack strips spell (issue #3413668)
  * fix for property attach spell for Skyrim (issue #3451054)
+ * fix for resource files that could not be removed (issue #3452880)
 
 changes since 1.1.0-RC1:
  * block number is visible
