--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,24 +1,42 @@
  == CHANGELOG ==
 
-This is version 1.1.1 of NifSkope.
+This is version 1.1.0-RC4 of NifSkope.
 
-changes since 1.1.0:
- * added Skyrim support
+changes planned for 1.1.1:
+ * adding Skyrim support
+
+changes since 1.1.0-RC4:
+ * Added support for "BSLightingShaderProperty" in the UV editor and exporter
+
+changes since 1.1.0-RC3:
+ * Fixed two regressions
+
+changes since 1.1.0-RC2:
+ * Fix: "havok material" no longer resets to "HAV_MAT_STONE" when packing strips
+ * Modified "havok" axes visibility
+ * Enabled double-sided rendering when specific flag specifies it
+ * Initial handling of unknown (possibly animation) alpha component of
+   NiTriShape vertex colors
+ * Fix: two regressions
+ * Added View Toolbar and new action - "reset block details"
+ * Fix: restoring the main window no longer resets "block details"
+ * Automatic vertex weighting initial support
+ * BSTreeNode initial support
 
 changes since 1.1.0-RC1:
  * block number is visible
  * made material editor dialog window modal
  * Update for new qhull
- * fix: quat. rotation keys linear interpolation issue
+ * Fix: quat. rotation keys linear interpolation issue
  * Fix for Qt 4.8.0: naming clash with dds_swap
- * fix: added handling of invalid "Triangles" indexes
- * fix: Skyrim textures are visible
+ * Fix: added handling of invalid "Triangles" indexes
+ * Fix: Skyrim textures are visible
  * Fixed NvTriStripObjects build error on gcc
- * fix: File->Quit was not storing the program settings
- * fix: bhkPackedNiTriStripsShape highlighting now works
- * fix: furniture below shapes is now correctly mouse
- * fix: transpaarency no longer hides selected fragments
- * fix: highlighting of bhkListShape. Also, group highlighting now works
+ * Fix: File->Quit was not storing the program settings
+ * Fix: bhkPackedNiTriStripsShape highlighting now works
+ * Fix: furniture below shapes is now correctly mouse
+ * Fix: transpaarency no longer hides selected fragments
+ * Fix: highlighting of bhkListShape. Also, group highlighting now works
  * Changed interactive selection approach
  * Fix for user version in big endian nifs
  * Require OpenGL 2.0 (this fixes a crash on older hardware)
