--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,6 @@
  == CHANGELOG ==
 
-This is version 1.1.0-RC4 of NifSkope.
+This is version 1.1.0-RC5 of NifSkope.
 
 changes planned for 1.1.1:
  * added Skyrim support
@@ -12,6 +12,16 @@ changes planned for 1.1.1:
  * fix for property attach spell for Skyrim (issue #3451054)
  * fix for resource files that could not be removed (issue #3452880)
  * fix for node names in ControllerLink blocks (issue #3453556)
+
+changes since 1.1.0-RC5:
+* Fix: .kf attaching for 10.0.1.0 - renaming the fields in "nif.xml" works as well
+* Fix: double_sided rendering issue
+* Add: SF_Double_Sided handling for "BSEffectShaderProperty"
+* Fix #3468080: property "paste" now works for non-NiProperty blocks
+* Fix #3471254: temporary set global template for some properties
+* Fix: rendering of double-sided + alpha unsorted triangles issue
+* Add: "BSEffectShaderProperty" - initial support
+* Add: unknown properties are now reported by the property factory
 
 changes since 1.1.0-RC4:
  * Added support for "BSLightingShaderProperty" in the UV editor and exporter
