--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,6 @@
  == CHANGELOG ==
 
-This is version 1.1.0-RC5 of NifSkope.
+This is version 1.1.0-RC6 of NifSkope.
 
 changes planned for 1.1.1:
  * added Skyrim support
@@ -12,6 +12,11 @@ changes planned for 1.1.1:
  * fix for property attach spell for Skyrim (issue #3451054)
  * fix for resource files that could not be removed (issue #3452880)
  * fix for node names in ControllerLink blocks (issue #3453556)
+
+changes since 1.1.0-RC6:
+* Added initial support for "BSLODTriShape" - its being rendered
+* Fixed a lot of stuff regarding .obj import when BSShaderPPLightingProperty is present
+* Fix: Handling of spaces in .mtl files filename
 
 changes since 1.1.0-RC5:
 * Fix: .kf attaching for 10.0.1.0 - renaming the fields in "nif.xml" works as well
