--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,6 @@
  == CHANGELOG ==
 
-This is version 1.1.0-RC6 of NifSkope.
+This is version 1.1.0-RC7 of NifSkope.
 
 changes planned for 1.1.1:
  * added Skyrim support
@@ -12,6 +12,13 @@ changes planned for 1.1.1:
  * fix for property attach spell for Skyrim (issue #3451054)
  * fix for resource files that could not be removed (issue #3452880)
  * fix for node names in ControllerLink blocks (issue #3453556)
+
+changes since 1.1.0-RC7:
+* Add: protective check to increase robustness
+* Fix: fixed #3525690 NifSkope Crash: MoppBvTree Triangles
+* Fix: blocked invalid memory access when "triangles" is empty
+* Fix: stopped triangle reordering on .obj import into "FO:NV" "NiTriShape"
+* nif,xml: bhkCompressedMeshShape: merged "skyfox", "ttl296" and probably other peoples work
 
 changes since 1.1.0-RC6:
 * Added initial support for "BSLODTriShape" - its being rendered
