--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -11,6 +11,7 @@ changes since 1.1.1:
 
 changes since 1.1.0:
 * Fix unsigned int enum issue.
+* Rename: binormals are now more accurately called bitangents.
 
 changes since 1.1.0-RC8:
 * Collada export fixes for Skyrim and Blender (contributed by mharj).
