--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,6 +1,10 @@
  == CHANGELOG ==
 
-This is version 1.1.2 of NifSkope.
+This is version 1.1.3 of NifSkope.
+
+changes since 1.1.2:
+* Qmake getting git hash no longer relies on git executable.
+* Code refactor: xml for ui of about form.
 
 changes since 1.1.1:
 * When combining material properties, keep original material names as much as possible (reported by koniption).
