--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -3,6 +3,7 @@
 This is version 1.1.3 of NifSkope.
 
 changes since 1.1.2:
+* Fix accidently broken xml for Fallout 3 (contributed by ttl269).
 * Qmake getting git hash no longer relies on git executable.
 * Code refactor: xml for ui of about form.
 * Fix for registry entry proliferation (niftools issue #3584193, reported by neomonkeus).
